<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparentBlackA0"
    android:padding="16dp"
    android:clickable="true"
    android:focusable="true"
    tools:context=".view.CommentFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutOverview"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/overview"
        app:helperText="@string/require"
        app:helperTextTextColor="@color/colorOnPrimary"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxTrending"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="This movie is very sugoi. Speachless. Recommend everyone to go and watch" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBoxTrending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trending"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toStartOf="@id/checkBoxUpcoming"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBoxUpcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_movie"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@id/checkBoxNowPlaying"
        app:layout_constraintStart_toEndOf="@id/checkBoxTrending"
        app:layout_constraintTop_toTopOf="@+id/checkBoxTrending" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBoxNowPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_playing"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkBoxUpcoming"
        app:layout_constraintTop_toTopOf="@+id/checkBoxTrending" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>